Fix overflow of navbar-brand on larger screen size

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -176,6 +176,13 @@ a.nav-link.active {
   }
 }
 
+@media only screen and (min-width:1737px){
+  a.navbar-brand {
+    font-size: 3vw;
+    width: 32%;
+  }
+}
+
 .container-fluid, div.row > .col-sm-12, .modal-content {
   background-color: rgba(60, 58, 67, 0.8);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 100 100'%3E%3Crect x='0' y='0' width='15' height='15' fill-opacity='0.6' fill='%23ffffff'/%3E%3C/svg%3E"); 
